--- a/OPSCommon/OPSComm/OPSComm/OPSComm.csproj
+++ b/OPSCommon/OPSComm/OPSComm/OPSComm.csproj
@@ -99,7 +99,8 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
-    <Reference Include="zlibnet">
+    <Reference Include="zlibnet, Version=1.3.3.0, Culture=neutral, PublicKeyToken=a9911c577c68b723, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\x64\Debug\zlibnet.dll</HintPath>
     </Reference>
   </ItemGroup>
