--- a/OPSCompute.NET/OPSCompute/OPSCompute.csproj
+++ b/OPSCompute.NET/OPSCompute/OPSCompute.csproj
@@ -59,10 +59,12 @@
     <AssemblyOriginatorKeyFile>OPSCompute.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PDMCompute">
+    <Reference Include="PDMCompute, Version=1.0.0.0, Culture=neutral, PublicKeyToken=819e137e81c42554, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\PDMCompute\bin\x64\Release\PDMCompute.dll</HintPath>
     </Reference>
-    <Reference Include="PDMMessages">
+    <Reference Include="PDMMessages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=589897a0c993a351, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\PDMMessages\bin\x64\Release\PDMMessages.dll</HintPath>
     </Reference>
     <Reference Include="System" />
