--- a/OPSWebServicesAPI/Web.config
+++ b/OPSWebServicesAPI/Web.config
@@ -11,12 +11,12 @@
     <section name="Jot" type="Jot.JotAuthConfigurationSection, Jot" />
   </configSections>
   <LogSettings>
-    <add key="LogPath" value="E:\OPSWebservicesAPI\Logs\" />
+    <add key="LogPath" value="C:\OPSWebservicesAPI\Logs\" />
     <add key="LogFile" value="OPSWebServices40Log.txt" />
   </LogSettings>
   <appSettings>
     <!-- Log directory and file name -->
-    <add key="ServiceLog" value="E:\\OPSWebservicesAPI\\Logs\\{0}_OPSWebServicesAPI.log" />
+    <add key="ServiceLog" value="C:\\OPSWebservicesAPI\\Logs\\{0}_OPSWebServicesAPI.log" />
     
     <!-- DLL Paths needed for M1 libreries -->
     <!--<add key="M1DLLPath" value="C:\Projects\ops\02_branches\CC\64_bits\VS 2019\OPSWebServices\OPSCompute.NET\OPSCompute\bin\Debug"/>-->
@@ -1088,7 +1088,7 @@
     <!-- Define some output appenders -->
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <!-- ** Ruta y Nombre del Archivo **************************************************** -->
-      <file value="E:\\OPSWebservicesAPI\\Logs\\OPSWebServicesAPI" />
+      <file value="C:\\OPSWebservicesAPI\\Logs\\OPSWebServicesAPI" />
       <!--Extension del Archivo-->
       <datePattern value="'_'yyyy-MM-dd'.log'" />
       <!-- ********************************************************************************* -->
@@ -1145,7 +1145,7 @@
     <version number="*">
       <settings>
         <!--<setting name="tns_admin" value="D:\app\client\clint.burnette\product\12.2.0\client_1\Network\Admin" />-->
-        <setting name="tns_admin" value="E:\app\client\Administrador\product\12.2.0\client_odac\Network\Admin" />
+        <setting name="tns_admin" value="C:\app\client\Administrador\product\12.2.0\client_odac\Network\Admin" />
       </settings>
     </version>
   </oracle.manageddataaccess.client>
